--- a/api/src/main/resources/reports/isrMain.jrxml
+++ b/api/src/main/resources/reports/isrMain.jrxml
@@ -556,8 +556,9 @@
 				<text><![CDATA[Graduation Assessment Results]]></text>
 			</staticText>
 			<textField>
-				<reportElement x="545" y="34" width="60" height="15" uuid="7ff4950d-6279-413e-8200-a450eb831f90">
+				<reportElement x="545" y="34" width="58" height="15" uuid="7ff4950d-6279-413e-8200-a450eb831f90">
 					<property name="com.jaspersoft.studio.unit.height" value="px"/>
+					<property name="com.jaspersoft.studio.unit.width" value="px"/>
 				</reportElement>
 				<textElement textAlignment="Left">
 					<font fontName="BC Sans" size="8" isBold="true"/>
@@ -565,7 +566,7 @@
 				<textFieldExpression><![CDATA["School Name: "]]></textFieldExpression>
 			</textField>
 			<textField>
-				<reportElement x="630" y="50" width="127" height="15" uuid="bd23ceca-07d5-4e6a-a266-8dda73c09239">
+				<reportElement x="623" y="50" width="127" height="15" uuid="bd23ceca-07d5-4e6a-a266-8dda73c09239">
 					<property name="com.jaspersoft.studio.unit.height" value="px"/>
 				</reportElement>
 				<textElement textAlignment="Left">
@@ -581,7 +582,7 @@
 				<text><![CDATA[Ministry of Education and Child Care]]></text>
 			</staticText>
 			<textField>
-				<reportElement x="0" y="40" width="66" height="15" uuid="8650a750-21b2-4c0f-8b34-49b5a5815d49">
+				<reportElement x="0" y="40" width="64" height="15" uuid="8650a750-21b2-4c0f-8b34-49b5a5815d49">
 					<property name="com.jaspersoft.studio.unit.height" value="px"/>
 					<property name="com.jaspersoft.studio.unit.width" value="px"/>
 				</reportElement>
@@ -591,7 +592,7 @@
 				<textFieldExpression><![CDATA["Student Name: "]]></textFieldExpression>
 			</textField>
 			<textField>
-				<reportElement x="0" y="55" width="120" height="15" uuid="5e29d86f-8976-4bf4-8822-22fadb4759de">
+				<reportElement x="0" y="55" width="118" height="15" uuid="5e29d86f-8976-4bf4-8822-22fadb4759de">
 					<property name="com.jaspersoft.studio.unit.height" value="px"/>
 					<property name="com.jaspersoft.studio.unit.width" value="px"/>
 				</reportElement>
@@ -605,7 +606,7 @@
 				<imageExpression><![CDATA["bc_gov_logo.jpg"]]></imageExpression>
 			</image>
 			<textField>
-				<reportElement x="66" y="40" width="280" height="15" uuid="519dd987-5569-4e77-8a88-38cd6871e986">
+				<reportElement x="64" y="40" width="334" height="15" uuid="519dd987-5569-4e77-8a88-38cd6871e986">
 					<property name="com.jaspersoft.studio.unit.height" value="px"/>
 				</reportElement>
 				<textElement>
@@ -614,7 +615,7 @@
 				<textFieldExpression><![CDATA[$F{studentName}]]></textFieldExpression>
 			</textField>
 			<textField>
-				<reportElement x="120" y="55" width="280" height="15" uuid="6938a5a5-38fb-44a2-92cc-44ede4b4d8a8">
+				<reportElement x="118" y="55" width="280" height="15" uuid="6938a5a5-38fb-44a2-92cc-44ede4b4d8a8">
 					<property name="com.jaspersoft.studio.unit.height" value="px"/>
 				</reportElement>
 				<textElement>
@@ -623,7 +624,7 @@
 				<textFieldExpression><![CDATA[$F{studentPEN}]]></textFieldExpression>
 			</textField>
 			<textField>
-				<reportElement x="605" y="34" width="152" height="15" uuid="2cf1f850-0edc-49dd-9583-c838e38ec39d">
+				<reportElement x="603" y="34" width="152" height="15" uuid="2cf1f850-0edc-49dd-9583-c838e38ec39d">
 					<property name="com.jaspersoft.studio.unit.height" value="px"/>
 				</reportElement>
 				<textElement textAlignment="Left">
@@ -632,8 +633,9 @@
 				<textFieldExpression><![CDATA[$F{schoolDetail}]]></textFieldExpression>
 			</textField>
 			<textField>
-				<reportElement x="545" y="50" width="85" height="15" uuid="cec78a11-4e68-455d-9f9a-946a5153a186">
+				<reportElement x="545" y="50" width="78" height="15" uuid="cec78a11-4e68-455d-9f9a-946a5153a186">
 					<property name="com.jaspersoft.studio.unit.height" value="px"/>
+					<property name="com.jaspersoft.studio.unit.width" value="px"/>
 				</reportElement>
 				<textElement textAlignment="Left">
 					<font fontName="BC Sans" size="8" isBold="true"/>
